# Chrono_Swarm

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  docker-compose.yml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  deploy-production.yml  performance-benchmark.yml  security-audit.yml
ansible/playbooks/: control-plane.yml  disaster-recovery.yml  execution-plane.yml  security-hardening.yml  site.yml
ansible/roles/chrono-swarm-control/tasks/: main.yml
ansible/roles/common/tasks/: main.yml
ansible/roles/disaster-recovery/tasks/: main.yml
crates/chrono-cli/: Cargo.toml
crates/chrono-cli/src/: main.rs
crates/cs-agent/: Cargo.toml
crates/cs-agent/src/: main.rs
crates/cs-api/: Cargo.toml
crates/cs-api/src/: main.rs
crates/cs-bayes-engine/: Cargo.toml
crates/cs-bayes-engine/src/: lib.rs
crates/cs-cache/: Cargo.toml
crates/cs-cache/src/: lib.rs
crates/cs-core/: Cargo.toml
crates/cs-core/migrations/: 001_initial_schema.sql
crates/cs-core/src/: domain.rs  errors.rs  events.rs  lib.rs
crates/cs-materializer/: Cargo.toml
crates/cs-materializer/src/: lib.rs
crates/cs-nervous-system/: Cargo.toml
crates/cs-nervous-system/src/: lib.rs
crates/cs-orchestrator/: Cargo.toml
crates/cs-orchestrator/src/: main.rs
crates/cs-reconciler/: Cargo.toml
crates/cs-reconciler/src/: lib.rs
crates/cs-scheduler/: Cargo.toml
crates/cs-scheduler/src/: main.rs
crates/cs-spawner/: Cargo.toml
crates/cs-spawner/src/: lib.rs
crates/cs-transpiler/: Cargo.toml
crates/cs-transpiler/src/: lib.rs
crates/cs-watchdog/: Cargo.toml
crates/cs-watchdog/src/: lib.rs
deployment/docker/: Dockerfile.multi-stage  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml
deployment/docker/service-dockerfiles/: Dockerfile.cs-api  Dockerfile.cs-orchestrator  Dockerfile.cs-reconciler  Dockerfile.cs-scheduler  Dockerfile.cs-spawner  Dockerfile.cs-watchdog
deployment/kubernetes/: namespace.yaml
deployment/logging/fluentd/: fluentd.conf
deployment/logging/logrotate/: chrono-swarm.conf
deployment/monitoring/alertmanager/: alertmanager.yml
deployment/monitoring/prometheus/: alerts.yml  prometheus.yml  recording-rules.yml
deployment/systemd/: cs-orchestrator.service  cs-reconciler.service  cs-scheduler.service  cs-spawner.service  cs-watchdog.service
docs/: architecture.md  deployment.md  development.md  disaster-recovery.md  performance-tuning.md  security.md
examples/: onboarding-job.json  test-job.json
packer/: variables.pkr.hcl
packer/golden-images/: bastion-node.pkr.hcl  control-node.pkr.hcl  executor-node.pkr.hcl
packer/scripts/: install-base.sh  install-docker.sh  install-monitoring.sh  security-hardening.sh
scripts/: backup-restore.sh  benchmark.sh  build-docker.sh  build.sh  create-kafka-topics.sh  dev-setup.sh  security-scan.sh  test.sh
scripts/monitoring/: health-check.sh  setup-alerts.sh
services/filesystem/: Dockerfile  package.json
services/orchestrator/: Dockerfile  package.json  routes.json  server.js
services/sequential-thinking/: Dockerfile
services/terminal/: Dockerfile  package.json  server.js
terraform/: backend.tf
terraform/environments/development/: main.tf  terraform.tfvars.example  variables.tf
terraform/environments/production/: main.tf  terraform.tfvars.example  variables.tf
terraform/environments/staging/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/modules/compute/: main.tf  outputs.tf  variables.tf
terraform/modules/database/: main.tf  outputs.tf  variables.tf
terraform/modules/disaster-recovery/: main.tf
terraform/modules/networking/: main.tf  outputs.tf  variables.tf
terraform/modules/observability/: main.tf  outputs.tf  variables.tf
terraform/modules/security/: main.tf  outputs.tf  variables.tf
terraform/scripts/: control-node-init.sh  disaster-recovery-init.sh  executor-node-init.sh  init-remote-state.sh
(+3 files in other folders)
