[workspace]
resolver = "2"
members = [
    "crates/cs-core",
    "crates/cs-api",
    "crates/cs-orchestrator",
    "crates/cs-scheduler",
    "crates/cs-spawner",
    "crates/cs-reconciler",
    "crates/cs-watchdog",
    "crates/cs-bayes-engine",
    "crates/cs-nervous-system",
    "crates/cs-cache",
    "crates/cs-materializer",
    "crates/cs-agent",
    "crates/cs-transpiler",
    "crates/chrono-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Master J <master@chronoswarm.com>"]
license = "PROPRIETARY"

[profile.release]
lto = "fat"
codegen-units = 1
panic = 'abort'
strip = true
opt-level = 3
target-cpu = "native"
overflow-checks = false

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
