[workspace]
resolver = "2"
members = [
    "crates/cs-core",
    "crates/cs-api",
    "crates/cs-orchestrator",
    "crates/cs-scheduler",
    "crates/cs-spawner",
    "crates/cs-reconciler",
    "crates/cs-watchdog",
    "crates/cs-bayes-engine",
    "crates/cs-nervous-system",
    "crates/cs-cache",
    "crates/cs-materializer",
    "crates/cs-agent",
    "crates/cs-transpiler",
    "crates/chrono-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Master J <master@chronoswarm.com>"]
license = "MIT"
homepage = "https://github.com/masterj/chrono-swarm"
repository = "https://github.com/masterj/chrono-swarm"
keywords = ["distributed", "agents", "swarm", "automation", "intelligence"]
categories = ["development-tools", "network-programming", "concurrency"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = 'abort'
strip = true
opt-level = 3
# Optimized for OCI's Ampere A1 CPUs - ARM64 Neoverse N1 architecture
overflow-checks = false

[profile.dev]
opt-level = 1
debug = true
split-debuginfo = "unpacked"

[profile.test]
opt-level = 1
debug = 2

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# HTTP/gRPC
axum = "0.7"
tonic = "0.10"
prost = "0.12"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
deadpool-postgres = "0.12"
deadpool-redis = "0.14"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Messaging
rdkafka = { version = "0.36", features = ["cmake-build", "lz4", "zstd", "ssl"] }

# WebAssembly
wasmtime = { version = "15.0", features = ["component-model", "async"] }
wasi-common = "15.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
config = "0.13"

# Cryptography
ring = "0.17"
rustls = "0.23"

# Performance
rayon = "1.8"
crossbeam = "0.8"
parking_lot = "0.12"

# Testing
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
wiremock = "0.5"
