[package]
name = "cs-cache"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
deadpool-postgres = "0.12"
deadpool-redis = "0.21"
redis = { version = "0.24", features = ["tokio-comp"] }
tokio-postgres = "0.7"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
bincode = "1.3"
futures = "0.3"
